AZUREUS CHANGELOG
-----------------

2006.xx.xx | Azureus 2.4.0.1




2006.02.11 | Azureus 2.4.0.0

FEATURE: Core | Logging seperated into sections [TuxPaper]
FEATURE: Core | Plugins can be disabled from starting up [TuxPaper]
FEATURE: Core | Separate high-speed transfer rates between peers within the local LAN [Parg,Nolar]
FEATURE: Core | Encrypted peer connections [Parg,Nolar]
FEATURE: Core | Revamped and much improved piece-picking code [MjrTom]
FEATURE: Core | Option to bind outgoing connections to the same local port, may help with NAT router instability [Nolar]
FEATURE: Plug | HTTP webseed support (http://www.getright.com/seedtorrent.html) [Parg]
FEATURE: Plug | New "team seeder" plugin [Parg]
FEATURE: Dev  | Plugins can now add views/tabs to Torrent Details, Peers View, etc [TuxPaper]
FEATURE: UI   | Draggable column reordering and column indicator (w/SWT 3.2+) [TuxPaper]
FEATURE: UI   | Peer piece map in Peers Tab [TuxPaper]
FEATURE: UI   | Manual tracker scrape option if auto-scrape disabled [Parg]
FEATURE: UI   | Share-ratio indicator and options to hide the various indicators [Parg]
FEATURE: UI   | Separate per-torrent options panel [Parg]

CHANGE: Core  | Clearer firewalled/NAT status reporting [Nolar]
CHANGE: Core  | Do not open the wiki NAT problem page if firewall status is OK [Nolar]
CHANGE: Core  | Disk manager threads - limited pool now serves all disk read/write requests [Parg]
CHANGE: Core  | Single thread now serves torrent piece picking etc (was one per download) [Parg]
CHANGE: Core  | Persistent IP bans now have limited lifetime [Parg]
CHANGE: Core  | Reworked compact storage type to support migration of formats [Parg]
CHANGE: Core  | Less requirements to pause downloads when changing file priorities [Parg]
CHANGE: Core  | Only one torrent can now be checking at a time [Parg]
CHANGE: Core  | DHT size estimation improved [Parg]
CHANGE: Core  | Default listen port number now randomized for new installs [Nolar]